# tristan-ff

./: .gitignore  CMakeLists.txt  Makefile.in  README.md  configure.py  isolde.py  requirements.txt
inputs/: input.dummy  input.loop  input.psr
legacy/: configure.py
src/: CMakeLists.txt  defs.F90  global_namespace.F90  tristan.F90  tristanmainloop.F90
src/algorithms/: field_solver.F90
src/io/: read_input.F90  write_output.F90
src/logistics/: exchange_fields.F90  finalize.F90  initialize.F90
src/objects/: domain.F90  fields.F90
src/tools/: auxiliary.F90  error_handling.F90  helpers.F90
user/: user_dummy.F90  user_emwave.F90  user_loop.F90  user_psr.F90  user_uniform.F90
